--- a/playground/pom.xml
+++ b/playground/pom.xml
@@ -62,6 +62,13 @@
       <artifactId>allure-cucumber4-jvm</artifactId>
       <version>2.20.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.14.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
