test commit for CI/CD

--- a/playground/.gitlab-ci.yml
+++ b/playground/.gitlab-ci.yml
@@ -6,7 +6,7 @@ default:
 stages:
   - test
 
-Integration tests with Allure:
+Integration test with Allure:
   stage: test
   script:
     - mvn clean test
